@@ -9,7 +9,7 @@
 
 	<name>sae</name>
 
-    <!-- Utilisation du fichier POM parent ALTAIR -->
+	<!-- Utilisation du fichier POM parent ALTAIR -->
 	<parent>
 		<groupId>fr.pnr.altair</groupId>
 		<artifactId>parent</artifactId>
@@ -17,7 +17,7 @@
 	</parent>
 
 	<properties>
-      <!-- Version des plug-ins Maven -->
+		<!-- Version des plug-ins Maven -->
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
 		<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
 		<maven-resources-plugin.version>2.5</maven-resources-plugin.version>
@@ -111,10 +111,10 @@
       ==========================================
       -->
 
-      <!-- JCL (Jakarta Commons Logging) vers SLF4J -->
+		<!-- JCL (Jakarta Commons Logging) vers SLF4J -->
 		<jcl-over-slf4j.version>1.6.1</jcl-over-slf4j.version>
 
-      <!-- Log4J vers SLF4J -->
+		<!-- Log4J vers SLF4J -->
 		<log4j-over-slf4j.version>1.6.1</log4j-over-slf4j.version>
 
       <!--
@@ -271,7 +271,7 @@
 	</properties>
 
 
-   <!-- Les modules -->
+	<!-- Les modules -->
 	<modules>
 
 		<module>sae-bo</module>
@@ -307,9 +307,9 @@
 		<module>sae-livrable</module>
 
 	</modules>
-   
 
-   <!-- Configuration SVN pour le plug-in maven-release -->
+
+	<!-- Configuration SVN pour le plug-in maven-release -->
 	<scm>
 		<url>
         scm:svn:http://svn.altair.recouv/svn/gns/java/branches/merge-hawaiv6/sae/
@@ -326,7 +326,7 @@
 	<build>
 		<plugins>
 
-         <!-- On spécifie la version du JDK et l'encodage de caractères des sources -->
+			<!-- On spécifie la version du JDK et l'encodage de caractères des sources -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -339,7 +339,8 @@
 			</plugin>
 
 
-         <!-- Dans le cas d'un packaging JAR, on demande que le JAR des sources soit également généré -->
+			<!-- Dans le cas d'un packaging JAR, on demande que le JAR des sources 
+				soit également généré -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -355,7 +356,7 @@
 			</plugin>
 
 
-         <!-- On spécifie l'encodage de caractères des ressources -->
+			<!-- On spécifie l'encodage de caractères des ressources -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -366,7 +367,7 @@
 			</plugin>
 
 
-         <!-- On demande la génération de la Javadoc -->
+			<!-- On demande la génération de la Javadoc -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -383,7 +384,7 @@
 				</configuration>
 			</plugin>
 
-         <!-- Pour la gestion des release -->
+			<!-- Pour la gestion des release -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
@@ -394,16 +395,13 @@
 				</configuration>
 			</plugin>
 
-         <!-- Configuration mémoire pour les TU -->
+			<!-- Configuration mémoire pour les TU -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Xmx2048m -XX:MaxPermSize=2048m -XX:+UseSerialGC -XX:-UseConcMarkSweepGC</argLine>
-				</configuration>
 			</plugin>
 
-         <!-- Déploiement réalisé uniquement à la fin du build de tous les modules, et pas module par module. -->
+         	<!-- Déploiement réalisé uniquement à la fin du build de tous les modules, et pas module par module. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
@@ -437,45 +435,17 @@
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
 			</plugin>
+			<!-- Plugin Sonar -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<configuration>
-					<instrumentation>
-						<includes>
-							<include>**/*.class</include>
-						</includes>
-					</instrumentation>
-					<encoding>UTF-8</encoding>
-				</configuration>
-				<executions>
-					<execution>
-						<id>clean</id>
-						<phase>pre-site</phase>
-						<goals>
-							<goal>clean</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>instrument</id>
-						<phase>site</phase>
-						<goals>
-							<goal>instrument</goal>
-							<goal>cobertura</goal>
-						</goals>
-						<configuration>
-							<encoding>UTF-8</encoding>
-						</configuration>
-					</execution>
-				</executions>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 
 
 		<pluginManagement>
-
-			<plugins>       
-            	<!-- Configuration du lifecycle maven -->
+			<plugins>
+				<!-- Configuration du lifecycle maven -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -525,12 +495,30 @@
 										<execute />
 									</action>
 								</pluginExecution>
+								<pluginExecution>
+									<!-- le plugin de qualimétrie jacoco n'a pas besoin d'être lancé 
+										par m2e -->
+									<pluginExecutionFilter>
+										<groupId>org.jacoco</groupId>
+										<artifactId>
+											jacoco-maven-plugin
+										</artifactId>
+										<versionRange>
+											[0.7.2.201409121644,)
+										</versionRange>
+										<goals>
+											<goal>prepare-agent</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-
-            	<!-- Compilation Aspect avec AspectJ -->
+				<!-- Compilation Aspect avec AspectJ -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>aspectj-maven-plugin</artifactId>
@@ -551,8 +539,7 @@
 						</execution>
 					</executions>
 				</plugin>
-            
-           		<!-- GESTION EXTENSION MAR AXIS2 -->
+				<!-- GESTION EXTENSION MAR AXIS2 -->
 				<plugin>
 					<groupId>org.apache.axis2</groupId>
 					<artifactId>axis2-mar-maven-plugin</artifactId>
@@ -565,35 +552,30 @@
 					<artifactId>axis2-repo-maven-plugin</artifactId>
 					<version>${axis2-maven-plugin.version}</version>
 				</plugin>
-				
 				<!-- Configuration mémoire pour les TU -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
-					<configuration>
-						<forkCount>3</forkCount>
-						<reuseForks>false</reuseForks>
-					</configuration>
+					<version>${maven-surefire-plugin.version}</version>
 					<dependencies>
 						<dependency>
 							<groupId>org.apache.maven.surefire</groupId>
 							<artifactId>surefire-junit47</artifactId>
-							<version>2.22.0</version>
+							<version>${maven-surefire-plugin.version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
-				<!-- On spécifie la version du plugin Maven pour Sonar -->
+				<!-- Plugin Sonar -->
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
 					<version>${sonar-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
-			          <groupId>org.codehaus.mojo</groupId>
-			          <artifactId>cobertura-maven-plugin</artifactId>
-			          <version>${cobertura-maven-plugin.version}</version>
-			        </plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>${maven-war-plugin.version}</version>
+				</plugin>
 			</plugins>
 
 		</pluginManagement>
@@ -608,35 +590,8 @@
 
 	</build>
 
-	<reporting>
-		<plugins>
-			<plugin>
-            <!-- use mvn cobertura:cobertura to generate cobertura reports -->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>${cobertura-maven-plugin.version}</version>
-				<configuration>
-					<formats>
-						<format>xml</format>
-						<format>html</format>
-					</formats>
-				</configuration>
-				<reportSets>
-					<reportSet>
-						<id>cobertura-report</id>
-				        <reports>
-				          <report>clean</report>
-				          <report>cobertura</report>
-				        </reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
-
 	<dependencies>
-
-      <!-- JUnit -->
+		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -644,7 +599,7 @@
 			<scope>test</scope>
 		</dependency>
 
-      <!-- SLF4J et Logback -->
+		<!-- SLF4J et Logback -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -660,6 +615,138 @@
 			<artifactId>logback-core</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
-
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>sonar_build</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<jacoco.maven.plugin>0.7.2.201409121644</jacoco.maven.plugin>
+				<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
+				<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+				<sonar.jacoco.reportPath>${project.build.directory}/coverage-reports/jacoco.exec</sonar.jacoco.reportPath>
+				<sonar.junit.reportPaths>${project.build.directory}/surefire-reports</sonar.junit.reportPaths>
+				<sonar.language>java</sonar.language>
+			</properties>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.jacoco</groupId>
+							<artifactId>jacoco-maven-plugin</artifactId>
+							<version>${jacoco.maven.plugin}</version>
+							<executions>
+							    <!-- Prepares a variable, surefireArgLine, that contains the info to be passed to the JVM hosting the code being tested. -->
+								<execution>
+									<id>default-prepare-agent</id>
+									<goals>
+										<goal>prepare-agent</goal>
+									</goals>
+									<configuration>
+										<!-- Sets the path to the file which contains the execution data. -->
+										<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+										<!-- Sets the name of the property containing the settings for 
+											JaCoCo runtime agent. -->
+										<propertyName>surefireArgLine</propertyName>
+										<!-- Avoid BATCH-2157 until Spring Batch Core 3.0.2 -->
+										<!-- Test execution error if don't use it -->
+										<excludes>
+											<exclude>**/springframework/**</exclude>
+										</excludes>
+									</configuration>
+								</execution>
+								<execution>
+									<id>default-report</id>
+									<goals>
+										<goal>report</goal>
+									</goals>
+									<configuration>
+										<!-- Sets the path to the file which contains the execution data. -->
+										<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+										<!-- Sets the output directory for the code coverage report. -->
+										<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+									</configuration>
+								</execution>
+								<execution>
+									<id>default-check</id>
+									<goals>
+										<goal>check</goal>
+									</goals>
+									<configuration>
+										<!-- Sets the path to the file which contains the execution data. -->
+										<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+										<haltOnFailure>false</haltOnFailure>
+										<rules>
+											<rule>
+												<element>PACKAGE</element>
+												<limits>
+													<limit implementation="org.jacoco.report.check.Limit">
+														<counter>INSTRUCTION</counter>
+														<value>COVEREDRATIO</value>
+														<minimum>0.2</minimum>
+													</limit>
+													<limit implementation="org.jacoco.report.check.Limit">
+														<counter>CLASS</counter>
+														<value>MISSEDCOUNT</value>
+														<maximum>15</maximum>
+													</limit>
+												</limits>
+											</rule>
+										</rules>
+									</configuration>
+								</execution>
+							</executions>
+							<configuration>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>${maven-surefire-plugin.version}</version>
+							<dependencies>
+								<dependency>
+									<groupId>org.apache.maven.surefire</groupId>
+									<artifactId>surefire-junit47</artifactId>
+									<version>${maven-surefire-plugin.version}</version>
+								</dependency>
+							</dependencies>
+							<configuration combine.self="override">
+								<argLine>-Xms256m -Xmx512m ${surefireArgLine}</argLine>
+								<forkMode>pertest</forkMode>
+								<!-- <forkCount>1</forkCount> <reuseForks>false</reuseForks> <parallel>classes</parallel> 
+									<useUnlimitedThreads>true</useUnlimitedThreads> -->
+								<!-- Specific to generate mapping between tests and covered code -->
+								<properties>
+									<property>
+										<name>listener</name>
+										<value>org.sonar.java.jacoco.JUnitListener</value>
+									</property>
+								</properties>
+								<testFailureIgnore>false</testFailureIgnore>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+				<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per test -->
+					<groupId>org.codehaus.sonar-plugins.java</groupId>
+					<artifactId>sonar-jacoco-listeners</artifactId>
+					<version>${sonar-jacoco-listeners.version}</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
